--- a/wp-stack/style.css
+++ b/wp-stack/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Comandos Blog
-Description: Премиальная тема для блога от Comandos.
+Theme Name: Comandos AI Blog
+Description: Премиальная тема для блога от Comandos AI.
 Version: 4.1
 */
 
